# workshop

./: README.md  conftest.py  pyproject.toml
.github/workflows/: run_tests.yml
tests/: conftest.py  test_auth.py
