[tool.poetry]
name = "workshop"
version = "0.1.0"
description = ""
authors = ["Aleksandra Figaj-Zdanowska <aleksandra.figaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.3"
pydantic = "^2.4.2"
requests = "^2.31.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
